mdapi/Custom/objects/Invoice_to_AP__c.object
<CustomObject>
    <description>Corporate Projects was built early on as a quick-hit project mgmt tool for a select group of corporate users. We have since explored more robust products and will likely at a future point time.</description>
    <fields>
        <fullName>AP_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices_to_AP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Line_Item__c</fullName>
        <label>Budget Line Item</label>
        <referenceTo>Budget_Line_Item__c</referenceTo>
        <relationshipLabel>Invoices to AP</relationshipLabel>
        <relationshipName>Invoices_to_AP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>GL Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payment_To_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Payment To Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Payment__c</fullName>
        <label>Confirmed Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructions_for_AP__c</fullName>
        <label>Instructions for AP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due on Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice to AP</label>
    <listViews>
        <fullName>All_Invoice_Request</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice Requests</label>
    </listViews>
    <listViews>
        <fullName>Paid_Invoices_All</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Paid Invoices - All</label>
    </listViews>
    <listViews>
        <fullName>Paid_Invoices_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Confirmed_Payment_To_Vendor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Paid Invoices - Confirmed</label>
    </listViews>
    <listViews>
        <fullName>Paid_Invoices_NeedsConfirm</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Paid Invoices - Needs Confirmation</label>
    </listViews>
    <listViews>
        <fullName>Past_Due_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Due Invoices</label>
    </listViews>
    <listViews>
        <fullName>Unpaid_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Budget_Line_Item__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Terms__c</columns>
        <columns>Due_Date__c</columns>
        <columns>AP_Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <label>Unpaid Invoices</label>
    </listViews>
    <nameField>
        <displayFormat>Invoice Request - {0000}</displayFormat>
        <label>Invoice to AP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices to AP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>